# liquichange

./: README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: conf.py  index.rst
src/liquichange/: changelog.py  element.py  precondition.py
tests/: test_changelog.py  test_element.py  test_precondition.py
