[tool.poetry]
name = "liquichange"
version = "0.2.1"
description = "Build and modify Liquibase changelogs in Python."
authors = ["Nelson Moore <nelson.moore@essential-soft.com>"]
readme = "README.md"
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
myst-nb = {version = "^0.17.1", python = "^3.8"}
sphinx-autoapi = "^2.1.0"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
