[project]
name = "liquichange"
version = "0.2.2"
description = "Build and modify Liquibase changelogs in Python."
authors = [{ name = "Nelson Moore", email = "nelson.moore@essential-soft.com" }]
readme = "README.md"
license = { text = "Apache 2.0" }
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.2.2",
    "pytest-cov>=4.0.0",
    "myst-nb>=0.17.1",
    "sphinx-autoapi>=2.1.0",
    "sphinx-rtd-theme>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"