[project]
name = "liquichange"
version = "0.2.2"
description = "Build and modify Liquibase changelogs in Python."
authors = [{ name = "Nelson Moore", email = "nelson.moore@essential-soft.com" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9,<4.0"
dependencies = [
    "pytest>=8.3.5",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0.0",
    "myst-nb>=0.17.1",
    "sphinx-autoapi>=2.1.0",
    "sphinx-rtd-theme>=1.2.0",
]

[tool.poetry]
name = "liquichange"
version = "0.2.2"
description = "Build and modify Liquibase changelogs in Python."
authors = ["Nelson Moore <nelson.moore@essential-soft.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "liquichange", from="src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pytest = ">=8.3.5"

[tool.poetry.group.dev.dependencies]
pytest-cov = ">=4.0.0"
myst-nb = ">=0.17.1"
sphinx-autoapi = ">=2.1.0"
sphinx-rtd-theme = ">=1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
